--- a/Admin/student.html
+++ b/Admin/student.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Dashboard</title>
+  <title>Registered Students</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
   <style>
     body {
       background: #f5f9f8;
@@ -103,8 +102,7 @@
   </style>
 </head>
 <body>
-
-  <!-- Toggle button -->
+    <!-- Toggle button -->
   <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
 
   <!-- Sidebar -->
@@ -118,33 +116,23 @@
     <a href="../index.html" class="logout-link" onclick="logout()">Logout</a>
   </div>
 
-  <!-- Main content -->
-  <main class="main-content">
-    <h2 class="dashboard-title mb-4">Welcome, Admin 👋</h2>
-
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <div class="card text-center p-4">
-          <h5 class="card-title mb-2">Total Students</h5>
-          <h2 id="studentCount" class="fw-bold">--</h2>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card text-center p-4">
-          <h5 class="card-title mb-2">Total Courses</h5>
-          <h2 id="courseCount" class="fw-bold">--</h2>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card text-center p-4">
-          <h5 class="card-title mb-2">Assignments</h5>
-          <h2 id="assignmentCount" class="fw-bold">--</h2>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <h1>Registered Students</h1>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered align-middle">
+      <thead class="table-primary">
+        <tr>
+          <th>Enrollment</th>
+          <th>Email</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Mobile</th>
+        </tr>
+      </thead>
+      <tbody id="studentsTableBody">
+        <!-- Student rows will be inserted here -->
+      </tbody>
+    </table>
+  </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
@@ -162,27 +150,45 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    async function fetchCounts() {
-      const students = await getDocs(collection(db, "students"));
-      document.getElementById("studentCount").innerText = students.size;
+    const studentsTableBody = document.getElementById("studentsTableBody");
 
-      const courses = await getDocs(collection(db, "courses"));
-      document.getElementById("courseCount").innerText = courses.size;
-
-      const assignments = await getDocs(collection(db, "assignments"));
-      document.getElementById("assignmentCount").innerText = assignments.size;
+    async function loadStudents() {
+      try {
+        const studentsSnapshot = await getDocs(collection(db, "students"));
+        if (studentsSnapshot.empty) {
+          studentsTableBody.innerHTML = `<tr><td colspan="5" class="text-center">No students found</td></tr>`;
+          return;
+        }
+        studentsTableBody.innerHTML = ""; // Clear any previous rows
+        studentsSnapshot.forEach(doc => {
+          const data = doc.data();
+          const row = document.createElement("tr");
+          row.innerHTML = `
+            <td>${data.enrollment || "-"}</td>
+            <td>${data.email || "-"}</td>
+            <td>${capitalize(data.firstName) || "-"}</td>
+            <td>${capitalize(data.lastName) || "-"}</td>
+            <td>${data.mobile || "-"}</td>
+          `;
+          studentsTableBody.appendChild(row);
+        });
+      } catch (error) {
+        studentsTableBody.innerHTML = `<tr><td colspan="5" class="text-danger text-center">Error loading students: ${error.message}</td></tr>`;
+        console.error("Error loading students:", error);
+      }
     }
 
-    fetchCounts();
-
-    window.logout = function () {
-      window.location.href = "../index.html";
+    function capitalize(str) {
+      if (!str) return "";
+      return str.charAt(0).toUpperCase() + str.slice(1);
     }
 
     window.toggleSidebar = function () {
-      document.getElementById('sidebar').classList.toggle('show');
-    }
-  </script>
+  const sidebar = document.getElementById('sidebar');
+  sidebar.classList.toggle('show');
+}
 
+    window.onload = loadStudents;
+  </script>
 </body>
 </html>
