--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -8,114 +8,69 @@
 
   <style>
     body {
-      background-color: #f4f6f9;
-      margin: 0;
-      font-family: 'Inter', sans-serif; /* Using Inter font */
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
 
-    /* Toggle button styling */
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1100;
+    .sidebar {
+      min-height: 100vh;
       background-color: #2A5C88;
       color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1.2rem;
-      border-radius: 5px;
-      cursor: pointer;
-      display: none; /* hidden by default */
+      padding: 20px 10px;
     }
 
-    /* Show toggle button only on small screens */
-    @media (max-width: 767.98px) {
-      .toggle-btn {
-        display: block;
-      }
-      .sidebar.show + .main-content {
-        /* Adjust main content when sidebar is shown on small screens */
-        transform: translateX(250px);
-        transition: transform 0.3s ease-in-out;
-      }
-    }
-
-    /* Sidebar styles for large screens */
-    @media (min-width: 768px) {
-      .sidebar {
-        height: 100vh;
-        background-color: #2A5C88;
-        color: white;
-        padding: 1rem;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        overflow-y: auto;
-      }
-
-      .main-content {
-        margin-left: 250px;
-        padding: 2rem;
-      }
-    }
-
-    /* Sidebar styles for small screens - hidden by default */
-    @media (max-width: 767.98px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 250px;
-        background-color: #2A5C88;
-        padding: 1rem;
-        color: white;
-        overflow-y: auto;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-        z-index: 1099;
-      }
-
-      .sidebar.show {
-        transform: translateX(0);
-      }
-
-      .main-content {
-        margin-left: 0;
-        padding: 2rem 1rem;
-      }
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
     }
 
     .sidebar a {
-      display: block;
-      padding: 0.75rem 1rem;
       color: white;
       text-decoration: none;
-      margin-bottom: 0.5rem;
+      display: block;
+      padding: 10px;
       border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
     }
 
     .sidebar a:hover,
     .sidebar a.active {
-      background-color: #1f4568;
+      background-color: #204664; /* Darker hover for clarity */
     }
 
-    .card {
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
     }
 
-    .card-title {
-      font-weight: bold;
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
     }
 
-    .dashboard-title {
-      color: #2A5C88;
-      font-weight: 600;
-      margin-bottom: 2rem;
+    .toggle-btn {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+      .sidebar.show {
+        transform: translateX(0);
+      }
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
+      }
     }
   </style>
 </head>
@@ -158,12 +113,12 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Subjects</label><br/>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="Java" id="java"><label class="form-check-label">Java</label></div>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="Python" id="python"><label class="form-check-label">Python</label></div>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="HTML" id="html"><label class="form-check-label">HTML</label></div>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="CSS" id="css"><label class="form-check-label">CSS</label></div>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="JavaScript" id="js"><label class="form-check-label">JavaScript</label></div>
-            <div class="form-check form-check-inline"><input class="form-check-input" type="checkbox" value="SQL" id="sql"><label class="form-check-label">SQL</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="Java"><label class="form-check-label">Java</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="Python"><label class="form-check-label">Python</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="HTML"><label class="form-check-label">HTML</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="CSS"><label class="form-check-label">CSS</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="JavaScript"><label class="form-check-label">JavaScript</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">SQL</label></div>
           </div>
           <button type="submit" class="btn btn-primary">Create Course</button>
         </form>
@@ -197,7 +152,7 @@
       statusMessageDiv.style.display = 'block';
       setTimeout(() => {
         statusMessageDiv.style.display = 'none';
-      }, 3000); // Hide after 3 seconds
+      }, 3000);
     }
 
     document.getElementById("courseForm").addEventListener("submit", async (e) => {
@@ -208,11 +163,11 @@
       const endDate = document.getElementById("endDate").value;
       const weeks = parseInt(document.getElementById("weeks").value);
 
-      const subjects = [];
-      ['java', 'python', 'html', 'css', 'js', 'sql'].forEach(id => {
-        const el = document.getElementById(id);
-        if (el && el.checked) subjects.push(el.value);
-      });
+      const subjects = Array.from(document.querySelectorAll(".subject-checkbox:checked")).map(cb => cb.value);
+      if (subjects.length === 0) {
+        showStatusMessage("Please select at least one subject.", "warning");
+        return;
+      }
 
       const course = {
         title,
@@ -237,10 +192,15 @@
     }
 
     document.querySelector('.toggle-btn').addEventListener('click', () => {
-    const sidebar = document.getElementById('sidebar');
-    sidebar.classList.toggle('show');
-  });
-    
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('show');
+    });
+
+    document.querySelectorAll('.sidebar a').forEach(link => {
+      link.addEventListener('click', () => {
+        document.getElementById('sidebar').classList.remove('show');
+      });
+    });
   </script>
 </body>
 </html>
