--- a/Admin/courseHistory.html
+++ b/Admin/courseHistory.html
@@ -8,152 +8,80 @@
 
   <style>
     body {
-      background-color: #f4f6f9;
-      margin: 0;
-      font-family: 'Inter', sans-serif; /* Using Inter font */
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
 
-    /* Toggle button styling */
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1100;
+    .sidebar {
+      min-height: 100vh;
       background-color: #2A5C88;
       color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1.2rem;
-      border-radius: 5px;
+      padding: 20px 10px;
+    }
+
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
       cursor: pointer;
-      display: none; /* hidden by default */
     }
 
-    /* Show toggle button only on small screens */
-    @media (max-width: 767.98px) {
-      .toggle-btn {
-        display: block;
-      }
-      .sidebar.show + .main-content {
-        /* Adjust main content when sidebar is shown on small screens */
-        transform: translateX(250px);
-        transition: transform 0.3s ease-in-out;
-      }
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: #204664;
     }
 
-    /* Sidebar styles for large screens */
-    @media (min-width: 768px) {
-      .sidebar {
-        height: 100vh;
-        background-color: #2A5C88;
-        color: white;
-        padding: 1rem;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        overflow-y: auto;
-      }
-
-      .main-content {
-        margin-left: 250px;
-        padding: 2rem;
-      }
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
     }
 
-    /* Sidebar styles for small screens - hidden by default */
-    @media (max-width: 767.98px) {
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
+    }
+
+    .btn-purple {
+      background: #2A5C88;
+      color: white;
+    }
+
+    .btn-purple:hover {
+      background: #204664;
+    }
+
+    .toggle-btn {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
       .sidebar {
         position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 250px;
-        background-color: #2A5C88;
-        padding: 1rem;
-        color: white;
-        overflow-y: auto;
+        width: 200px;
+        z-index: 1000;
         transform: translateX(-100%);
         transition: transform 0.3s ease-in-out;
-        z-index: 1099;
       }
 
       .sidebar.show {
         transform: translateX(0);
       }
 
-      .main-content {
-        margin-left: 0;
-        padding: 2rem 1rem;
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
       }
-    }
-
-    .sidebar a {
-      display: block;
-      padding: 0.75rem 1rem;
-      color: white;
-      text-decoration: none;
-      margin-bottom: 0.5rem;
-      border-radius: 8px;
-    }
-
-    .sidebar a:hover,
-    .sidebar a.active {
-      background-color: #1f4568;
-    }
-
-    .card {
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-    }
-
-    .card-title {
-      font-weight: bold;
-    }
-
-    .dashboard-title {
-      color: #2A5C88;
-      font-weight: 600;
-      margin-bottom: 2rem;
-    }
-
-    /* Modal styling */
-    .modal-backdrop {
-      position: fixed;
-      top: 0; left: 0; bottom: 0; right: 0;
-      background: rgba(0,0,0,0.5);
-      z-index: 1040;
-      display: none; /* hidden by default */
-    }
-
-    .modal-custom {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      z-index: 1050;
-      max-width: 600px;
-      width: 90%;
-      border-radius: 8px;
-      box-shadow: 0 5px 15px rgba(0,0,0,.5);
-      padding: 1.5rem;
-      max-height: 80vh;
-      overflow-y: auto;
-      display: none; /* hidden by default */
-    }
-
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
     }
   </style>
 </head>
@@ -175,6 +103,7 @@
       <!-- Main Content -->
       <div class="col-md-9 main-content">
         <h2 class="dashboard-title">Course History</h2>
+        <div id="loading" class="text-center my-4">Loading courses...</div>
         <div id="courseList" class="row"></div>
         <div id="weekList" class="row" style="display: none;"></div>
         <div id="subjectList" class="row" style="display: none;"></div>
@@ -183,17 +112,29 @@
     </div>
   </div>
 
-  <!-- Modal container -->
-  <div id="modalBackdrop" class="modal-backdrop"></div>
-  <div id="modal" class="modal-custom">
-    <h5>Select Students to Allow Access</h5>
-    <div id="studentCheckboxes" style="max-height: 300px; overflow-y: auto; margin-bottom: 1rem;"></div>
-    <button id="saveAccessBtn" class="btn btn-primary">Save</button>
-    <button id="cancelModalBtn" class="btn btn-secondary ms-2">Cancel</button>
+  <!-- Bootstrap Modal -->
+  <div class="modal fade" id="allowModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Select Students to Allow Access</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="studentCheckboxes">
+          <p>Loading students...</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="saveAccessBtn" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Custom Status Message -->
-  <div id="statusMessage" class="alert"></div>
+  <div id="statusMessage" class="alert" style="display: none;"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Firebase + JS -->
   <script type="module">
@@ -213,32 +154,24 @@
   const db = getFirestore(app);
 
   const courseList = document.getElementById("courseList");
-  const weekList = document.getElementById("weekList");
-  const subjectList = document.getElementById("subjectList");
-  const backButton = document.getElementById("backButton");
-
-  const modalBackdrop = document.getElementById("modalBackdrop");
-  const modal = document.getElementById("modal");
   const studentCheckboxes = document.getElementById("studentCheckboxes");
   const saveAccessBtn = document.getElementById("saveAccessBtn");
-  const cancelModalBtn = document.getElementById("cancelModalBtn");
   const statusMessageDiv = document.getElementById("statusMessage");
+  const loadingDiv = document.getElementById("loading");
 
   let currentCourseId = null;
   let currentCourseTitle = null;
   let allStudents = [];
 
-  // Function to show custom status messages
   function showStatusMessage(message, type = 'info') {
     statusMessageDiv.textContent = message;
     statusMessageDiv.className = `alert mt-3 alert-${type}`;
     statusMessageDiv.style.display = 'block';
     setTimeout(() => {
       statusMessageDiv.style.display = 'none';
-    }, 3000); // Hide after 3 seconds
+    }, 3000);
   }
 
-  // Load all registered students from Firestore "students" collection
   async function loadStudents() {
     try {
       const studentsSnap = await getDocs(collection(db, "students"));
@@ -253,6 +186,7 @@
     courseList.innerHTML = "";
     try {
       const snapshot = await getDocs(collection(db, "courses"));
+      loadingDiv.style.display = "none";
 
       if (snapshot.empty) {
         courseList.innerHTML = "<p>No courses found.</p>";
@@ -280,7 +214,6 @@
         courseList.appendChild(card);
       });
 
-      // Attach click event listeners to all allow buttons
       document.querySelectorAll(".allow-btn").forEach(btn => {
         btn.addEventListener("click", openAllowModal);
       });
@@ -290,17 +223,14 @@
     }
   }
 
-  // Open modal and show students with checkboxes, load existing allowed students for course
   async function openAllowModal(event) {
     currentCourseId = event.target.dataset.courseId;
     currentCourseTitle = event.target.dataset.courseTitle;
 
-    // Load students if not loaded
     if (allStudents.length === 0) {
       await loadStudents();
     }
 
-    // Load existing allowed students for this course (stored in course doc, field: allowedStudents)
     try {
       const courseDocRef = doc(db, "courses", currentCourseId);
       const courseDocSnap = await getDoc(courseDocRef);
@@ -309,62 +239,50 @@
         allowedStudents = courseDocSnap.data().allowedStudents || [];
       }
 
-      studentCheckboxes.innerHTML = "";
-      allStudents.forEach(student => {
-        const isChecked = allowedStudents.includes(student.id);
-        const studentName = student.name || student.enrollment || student.id;
-        const checkboxId = `student_${student.id}`;
-        const checkboxHTML = `
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="${student.id}" id="${checkboxId}" ${isChecked ? "checked" : ""}>
-            <label class="form-check-label" for="${checkboxId}">${studentName}</label>
-          </div>
-        `;
-        studentCheckboxes.insertAdjacentHTML("beforeend", checkboxHTML);
-      });
+      if (allStudents.length === 0) {
+        studentCheckboxes.innerHTML = "<p>No students found.</p>";
+      } else {
+        studentCheckboxes.innerHTML = "";
+        allStudents.forEach(student => {
+          const isChecked = allowedStudents.includes(student.id);
+          const studentName = student.name || student.enrollment || student.id;
+          studentCheckboxes.insertAdjacentHTML("beforeend", `
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="${student.id}" id="student_${student.id}" ${isChecked ? "checked" : ""}>
+              <label class="form-check-label" for="student_${student.id}">${studentName}</label>
+            </div>
+          `);
+        });
+      }
 
-      modal.style.display = "block";
-      modalBackdrop.style.display = "block";
+      new bootstrap.Modal(document.getElementById('allowModal')).show();
     } catch (error) {
       console.error("Error preparing student access modal:", error);
       showStatusMessage("Error preparing student access modal.", "danger");
     }
   }
 
-  // Save allowed students for the current course
   async function saveAllowedStudents() {
     if (!currentCourseId) return;
-
-    const selectedStudentIds = Array.from(studentCheckboxes.querySelectorAll('input[type="checkbox"]:checked'))
-      .map(cb => cb.value);
+    const selectedStudentIds = Array.from(studentCheckboxes.querySelectorAll('input[type="checkbox"]:checked')).map(cb => cb.value);
 
     try {
       const courseDocRef = doc(db, "courses", currentCourseId);
       await setDoc(courseDocRef, { allowedStudents: selectedStudentIds }, { merge: true });
-
       showStatusMessage(`Allowed students saved for course "${currentCourseTitle}".`, "success");
-      closeModal();
+      bootstrap.Modal.getInstance(document.getElementById('allowModal')).hide();
     } catch (error) {
       console.error("Error saving allowed students:", error);
       showStatusMessage("Failed to save allowed students.", "danger");
     }
   }
 
-  function closeModal() {
-    modal.style.display = "none";
-    modalBackdrop.style.display = "none";
-  }
-
-  // Event listeners for modal buttons
   saveAccessBtn.addEventListener("click", saveAllowedStudents);
-  cancelModalBtn.addEventListener("click", closeModal);
-  modalBackdrop.addEventListener("click", closeModal);
 
   window.logout = function () {
     window.location.href = "index.html";
   }
 
-  // Sidebar toggle function for mobile
   window.toggleSidebar = function () {
     const sidebar = document.getElementById('sidebar');
     sidebar.classList.toggle('show');
