--- a/Admin/create_Code_Assignment.html
+++ b/Admin/create_Code_Assignment.html
@@ -4,141 +4,98 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin: Create Code Assignment</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  
   <style>
     body {
-      background-color: #f8f9fa;
-      font-family: 'Inter', sans-serif; /* Using Inter font */
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
-    /* On larger screens, show sidebar fixed */
-    @media (min-width: 992px) {
-      #sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        height: 100vh;
-        padding: 1rem;
-        background-color: #2a5c88;
-        color: white;
-      }
-      #sidebar .nav-link {
-        color: white;
-        border-radius: 0.5rem;
-      }
-      #sidebar .nav-link.active,
-      #sidebar .nav-link:hover {
-        background-color: #1f4568;
-        color: white;
-      }
-      #mainContent {
-        margin-left: 260px;
-        padding: 2rem;
-      }
-      /* Hide offcanvas toggle button on large screens */
-      .toggle-btn { /* Changed from #offcanvasToggle to general class */
-        display: none !important; /* Important to override Bootstrap's d-lg-none */
-      }
-    }
-    /* Smaller screens: margin & padding for main content */
-    @media (max-width: 991.98px) {
-      #mainContent {
-        padding: 1rem;
-      }
-      .toggle-btn { /* Changed from #offcanvasToggle to general class */
-        display: block; /* Show on small screens */
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        z-index: 1100;
-        background-color: #2A5C88;
-        color: white;
-        border: none;
-        padding: 0.5rem 1rem;
-        font-size: 1.2rem;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-    }
-    /* Style for offcanvas sidebar */
-    .offcanvas-body {
-      padding: 0;
-    }
-    .offcanvas-body .nav-link {
-      padding: 1rem 1.25rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+    .sidebar {
+      min-height: 100vh;
+      background-color: #2A5C88;
       color: white;
+      padding: 20px 10px;
     }
-    .offcanvas-body .nav-link.active,
-    .offcanvas-body .nav-link:hover {
-      background-color: #1f4568;
+
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: #2A5C88;
+    }
+
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
+    }
+
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
+    }
+
+    .btn-purple {
+      background: #2A5C88;
       color: white;
     }
 
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
+    .btn-purple:hover {
+      background: #2A5C88;
+    }
+
+    .toggle-btn {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .sidebar.show {
+        transform: translateX(0);
+      }
+
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Toggle button for mobile (controls offcanvas) -->
-  <button
-    class="toggle-btn"
-    type="button"
-    data-bs-toggle="offcanvas"
-    data-bs-target="#sidebarOffcanvas"
-    aria-controls="sidebarOffcanvas"
-  >
-    ☰ Menu
-  </button>
+    <!-- Toggle button -->
+  <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
 
-  <!-- Sidebar for large screens -->
-  <nav id="sidebar" class="d-none d-lg-block">
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
     <h4 class="mb-4">Admin Panel</h4>
-    <nav class="nav flex-column">
-      <a class="nav-link" href="create_assignment.html">Create Assignment</a>
-      <a class="nav-link active" href="create_Code_Assignment.html">Create Code Assignment</a>
-      <a class="nav-link" href="create_assignment_History.html">Assignment History</a>
-      <a class="nav-link" href="admin_dashboard.html" onclick="logout()">← Back</a>
-    </nav>
-  </nav>
-
-  <!-- Offcanvas Sidebar for smaller screens -->
-  <div
-    class="offcanvas offcanvas-start text-bg-primary"
-    tabindex="-1"
-    id="sidebarOffcanvas"
-    aria-labelledby="sidebarOffcanvasLabel"
-  >
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="sidebarOffcanvasLabel">Admin Panel</h5>
-      <button
-        type="button"
-        class="btn-close btn-close-white"
-        data-bs-dismiss="offcanvas"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="offcanvas-body p-0">
-      <nav class="nav flex-column">
-        <a class="nav-link" href="create_assignment.html" data-bs-dismiss="offcanvas">Create Assignment</a>
-        <a class="nav-link active" href="create_Code_Assignment.html" data-bs-dismiss="offcanvas">Create Code Assignment</a>
-        <a class="nav-link" href="create_assignment_History.html" data-bs-dismiss="offcanvas">Assignment History</a>
-        <a class="nav-link" href="admin_dashboard.html" onclick="logout()" data-bs-dismiss="offcanvas">← Back</a>
-      </nav>
-    </div>
+    <a class="active" href="create_assignment.html">Create Assignment</a>
+    <a href="create_Code_Assignment.html">create code Assignment </a>
+    <a href="create_assignment_History.html">Assignment History</a>
+    <a href="admin_dashboard.html" onclick="logout()">← Back</a>
   </div>
 
   <!-- Main content -->
@@ -220,13 +177,9 @@
           </button>
         </div>
       </form>
-      <!-- Status message div, placed inside mainContent or just below the form -->
-      <div id="formStatusMessage" class="mt-3 text-center alert" style="display:none;"></div>
+      <div id="statusMessage" class="mt-3 text-center"></div>
     </div>
   </main>
-
-  <!-- Custom Status Message (for global messages, not form-specific) -->
-  <div id="statusMessage" class="alert"></div>
 
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -261,23 +214,12 @@
     const form = document.getElementById("createAssignmentForm");
     const testCasesContainer = document.getElementById("testCasesContainer");
     const addTestCaseBtn = document.getElementById("addTestCaseBtn");
-    const formStatusMessageDiv = document.getElementById("formStatusMessage"); // Specific for form messages
-    const globalStatusMessageDiv = document.getElementById("statusMessage"); // For general messages
+    const statusMessage = document.getElementById("statusMessage");
     const saveAssignmentBtn = document.getElementById("saveAssignmentBtn");
 
     const courseSelect = document.getElementById("courseSelect");
     const weekSelect = document.getElementById("weekSelect");
     const subjectSelect = document.getElementById("subjectSelect");
-
-    // Function to show custom status messages (form-specific or global)
-    function showStatusMessage(message, type = 'info', targetDiv = formStatusMessageDiv) {
-      targetDiv.textContent = message;
-      targetDiv.className = `alert mt-3 alert-${type}`;
-      targetDiv.style.display = 'block';
-      setTimeout(() => {
-        targetDiv.style.display = 'none';
-      }, 3000); // Hide after 3 seconds
-    }
 
     // Load courses from root-level "courses" collection
     async function loadCourses() {
@@ -293,7 +235,7 @@
         });
       } catch (err) {
         console.error("Error loading courses:", err);
-        showStatusMessage(`Error loading courses: ${err.message}`, 'danger', globalStatusMessageDiv);
+        statusMessage.innerHTML = `<p class="text-danger">Error loading courses: ${err.message}</p>`;
       }
     }
 
@@ -306,10 +248,7 @@
 
       try {
         const courseDoc = await getDoc(doc(db, "courses", courseId));
-        if (!courseDoc.exists()) {
-          showStatusMessage("Selected course not found.", 'warning');
-          return;
-        }
+        if (!courseDoc.exists()) return;
 
         const data = courseDoc.data();
 
@@ -320,8 +259,6 @@
             opt.textContent = `Week ${i}`;
             weekSelect.appendChild(opt);
           }
-        } else {
-           showStatusMessage("Number of weeks not defined for this course.", 'warning');
         }
 
         if (Array.isArray(data.subjects)) {
@@ -331,12 +268,10 @@
             opt.textContent = subject;
             subjectSelect.appendChild(opt);
           });
-        } else {
-          showStatusMessage("Subjects not defined for this course.", 'warning');
         }
       } catch (error) {
         console.error("Error loading course data:", error);
-        showStatusMessage(`Error loading course data: ${error.message}`, 'danger', globalStatusMessageDiv);
+        statusMessage.innerHTML = `<p class="text-danger">Error loading course data: ${error.message}</p>`;
       }
     });
 
@@ -354,13 +289,12 @@
     testCasesContainer.addEventListener("click", (e) => {
       if (e.target.classList.contains("remove-test-case")) {
         e.target.closest(".test-case-group").remove();
-        showStatusMessage("Test case removed.", 'info');
       }
     });
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      showStatusMessage("Saving assignment...", 'info', formStatusMessageDiv);
+      statusMessage.innerHTML = `<p class="text-info">Saving assignment...</p>`;
       saveAssignmentBtn.disabled = true;
 
       const assignmentCourseId = courseSelect.value;
@@ -385,13 +319,7 @@
       });
 
       if (testCases.length === 0) {
-        showStatusMessage("Please add at least one test case.", 'danger', formStatusMessageDiv);
-        saveAssignmentBtn.disabled = false;
-        return;
-      }
-
-      if (!assignmentCourseId || !assignmentSubject || !assignmentWeek || !assignmentTitle || !problemStatement) {
-        showStatusMessage("Please fill all assignment details (Course, Subject, Week, Title, Problem Statement).", 'danger', formStatusMessageDiv);
+        statusMessage.innerHTML = `<p class="text-danger">Please add at least one test case.</p>`;
         saveAssignmentBtn.disabled = false;
         return;
       }
@@ -412,7 +340,7 @@
           }
         );
 
-        showStatusMessage(`Assignment saved successfully! ID: ${newAssignmentRef.id}`, 'success', formStatusMessageDiv);
+        statusMessage.innerHTML = `<p class="text-success">Assignment saved successfully! ID: ${newAssignmentRef.id}</p>`;
         form.reset();
         weekSelect.innerHTML = `<option value="">-- Select Week --</option>`;
         subjectSelect.innerHTML = `<option value="">-- Select Subject --</option>`;
@@ -425,17 +353,15 @@
             `;
       } catch (error) {
         console.error("Error adding document:", error);
-        showStatusMessage(`Error saving assignment: ${error.message}`, 'danger', formStatusMessageDiv);
+        statusMessage.innerHTML = `<p class="text-danger">Error saving assignment: ${error.message}</p>`;
       } finally {
         saveAssignmentBtn.disabled = false;
       }
     });
-
-    // Logout function
-    window.logout = function () {
-      window.location.href = "admin_dashboard.html"; // Redirect to admin dashboard on logout for now
-    }
-
+window.toggleSidebar = function () {
+  const sidebar = document.getElementById('sidebar');
+  sidebar.classList.toggle('show');
+}
     // Load courses on page load
     loadCourses();
   </script>
