--- a/Admin/create_assignment.html
+++ b/Admin/create_assignment.html
@@ -6,117 +6,81 @@
   <title>Create Assignment</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
-    body { 
-      background-color: #f4f6f9; 
-      margin: 0; 
-      font-family: 'Inter', sans-serif; /* Using Inter font */
+    body {
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
-    
-    /* Toggle button styling */
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1100;
+
+    .sidebar {
+      min-height: 100vh;
       background-color: #2A5C88;
       color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1.2rem;
-      border-radius: 5px;
-      cursor: pointer;
-      display: none; /* hidden by default */
-    }
-    
-    /* Show toggle button only on small screens */
-    @media (max-width: 767.98px) {
-      .toggle-btn {
-        display: block;
-      }
-      .sidebar.show + .main-content {
-        /* Adjust main content when sidebar is shown on small screens */
-        transform: translateX(250px);
-        transition: transform 0.3s ease-in-out;
-      }
+      padding: 20px 10px;
     }
 
-    /* Sidebar styles for large screens */
-    @media (min-width: 768px) {
-      .sidebar {
-        height: 100vh;
-        background-color: #2A5C88;
-        color: white;
-        padding: 1rem;
-        position: fixed;
-        width: 250px;
-        top: 0;
-        left: 0;
-        overflow-y: auto;
-      }
-      .main-content {
-        margin-left: 270px;
-        padding: 2rem;
-      }
-    }
-
-    /* Sidebar styles for small screens - hidden by default */
-    @media (max-width: 767.98px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 250px;
-        background-color: #2A5C88;
-        padding: 1rem;
-        color: white;
-        overflow-y: auto;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-        z-index: 1099;
-      }
-      .sidebar.show {
-        transform: translateX(0);
-      }
-      .main-content {
-        margin-left: 0;
-        padding: 2rem 1rem;
-      }
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
     }
 
     .sidebar a {
-      display: block;
-      padding: 0.75rem 1rem;
       color: white;
       text-decoration: none;
-      margin-bottom: 0.5rem;
+      display: block;
+      padding: 10px;
       border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
     }
-    .sidebar a:hover, .sidebar a.active { background-color: #1f4568; }
 
-    .card {
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      margin-bottom: 2rem;
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: #2A5C88;
     }
-    .dashboard-title {
-      color: #2A5C88;
-      font-weight: 600;
-      margin-bottom: 2rem;
-    }
-    textarea { resize: vertical; }
 
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
+    }
+
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
+    }
+
+    .btn-purple {
+      background: #2A5C88;
+      color: white;
+    }
+
+    .btn-purple:hover {
+      background: #2A5C88;
+    }
+
+    .toggle-btn {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .sidebar.show {
+        transform: translateX(0);
+      }
+
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
+      }
     }
   </style>
 </head>
