--- a/Admin/create_assignment_History.html
+++ b/Admin/create_assignment_History.html
@@ -6,117 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body { 
-      background-color: #f4f6f9; 
-      margin: 0;
-      font-family: 'Inter', sans-serif; /* Using Inter font */
+    body {
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
-
-    /* Toggle button styling */
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1100;
+    .sidebar {
+      min-height: 100vh;
       background-color: #2A5C88;
       color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1.2rem;
-      border-radius: 5px;
-      cursor: pointer;
-      display: none; /* hidden by default */
+      padding: 20px 10px;
     }
-
-    /* Show toggle button only on small screens */
-    @media (max-width: 767.98px) {
-      .toggle-btn {
-        display: block;
-      }
-      .sidebar.show + .main-content {
-        /* Adjust main content when sidebar is shown on small screens */
-        transform: translateX(250px);
-        transition: transform 0.3s ease-in-out;
-      }
-    }
-
-    /* Sidebar styles for large screens */
-    @media (min-width: 768px) {
-      .sidebar {
-        height: 100vh;
-        background-color: #2A5C88;
-        color: white;
-        padding: 1rem;
-        position: fixed;
-        width: 250px;
-        top: 0;
-        left: 0;
-        overflow-y: auto;
-      }
-      .main-content {
-        margin-left: 270px;
-        padding: 2rem;
-      }
-    }
-
-    /* Sidebar styles for small screens - hidden by default */
-    @media (max-width: 767.98px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 250px;
-        background-color: #2A5C88;
-        padding: 1rem;
-        color: white;
-        overflow-y: auto;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-        z-index: 1099;
-      }
-      .sidebar.show {
-        transform: translateX(0);
-      }
-      .main-content {
-        margin-left: 0;
-        padding: 2rem 1rem;
-      }
-    }
-
+    .sidebar h4 { font-weight: bold; margin-bottom: 30px; }
     .sidebar a {
-      display: block;
-      padding: 0.75rem 1rem;
       color: white;
       text-decoration: none;
-      margin-bottom: 0.5rem;
+      display: block;
+      padding: 10px;
       border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
     }
-    .sidebar a:hover,
-    .sidebar a.active {
-      background-color: #1f4568;
-    }
-
-    .card {
-      margin-bottom: 1rem;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-    }
-    .nested-section {
-      margin-left: 2rem;
-      margin-top: 0.5rem;
-    }
-
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
+    .sidebar a.active,
+    .sidebar a:hover { background-color: #1f4565; }
+    .sidebar a.logout-link { color: #ffcccc !important; }
+    .sidebar a.logout-link:hover { background-color: #c0392b; color: white !important; }
+    .btn-purple { background: #2A5C88; color: white; }
+    .btn-purple:hover { background: #1f4565; }
+    .toggle-btn { display: none; }
+    @media (max-width: 768px) {
+      .sidebar {
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+      .sidebar.show { transform: translateX(0); }
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
+      }
     }
   </style>
 </head>
@@ -124,21 +57,23 @@
   <!-- Toggle button -->
   <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
 
+  <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <h4 class="mb-4">Admin Panel</h4>
     <a href="create_assignment.html">Create Assignment</a>
-    <a href="create_Code_Assignment.html">create code Assignment</a>
+    <a href="create_Code_Assignment.html">Create Code Assignment</a>
     <a class="active" href="create_assignment_History.html">Assignment History</a>
     <a href="admin_dashboard.html">← Back</a>
   </div>
 
-  <div class="main-content">
+  <!-- Main content -->
+  <div class="main-content p-3">
     <h2 class="mb-4">Assignment History</h2>
     <div id="courseContainer"></div>
   </div>
 
-  <!-- Custom Status Message -->
-  <div id="statusMessage" class="alert"></div>
+  <!-- Status message -->
+  <div id="statusMessage" class="alert" style="display:none;"></div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
@@ -159,48 +94,39 @@
     const courseContainer = document.getElementById("courseContainer");
     const statusMessageDiv = document.getElementById("statusMessage");
 
-    // Function to show custom status messages
     function showStatusMessage(message, type = 'info') {
       statusMessageDiv.textContent = message;
       statusMessageDiv.className = `alert mt-3 alert-${type}`;
       statusMessageDiv.style.display = 'block';
-      setTimeout(() => {
-        statusMessageDiv.style.display = 'none';
-      }, 3000); // Hide after 3 seconds
+      setTimeout(() => { statusMessageDiv.style.display = 'none'; }, 3000);
     }
 
     async function loadAssignments() {
       try {
-        const snapshot = await getDocs(collection(db, "courses"));
-        const snapshot_1 = await getDocs(collection(db, "assignments"));
+        const [coursesSnap, assignmentsSnap] = await Promise.all([
+          getDocs(collection(db, "courses")),
+          getDocs(collection(db, "assignments"))
+        ]);
+
         const assignmentsByCourse = {};
 
-        snapshot_1.forEach(doc => {
+        assignmentsSnap.forEach(doc => {
           const data = doc.data();
           const courseId = data.courseId;
-          const week = data.week || "Week Unknown"; // Handle cases where week might be missing
+          const week = data.week || "Week Unknown";
           const subject = data.subject || "Unknown Subject";
 
-          if (!assignmentsByCourse[courseId]) {
-            assignmentsByCourse[courseId] = { weeks: {} };
-          }
-
-          if (!assignmentsByCourse[courseId].weeks[week]) {
-            assignmentsByCourse[courseId].weeks[week] = {};
-          }
-
-          assignmentsByCourse[courseId].weeks[week][subject] = {
-            ...data,
-            docId: doc.id
-          };
+          if (!assignmentsByCourse[courseId]) assignmentsByCourse[courseId] = { weeks: {} };
+          if (!assignmentsByCourse[courseId].weeks[week]) assignmentsByCourse[courseId].weeks[week] = {};
+          assignmentsByCourse[courseId].weeks[week][subject] = { ...data, docId: doc.id };
         });
 
-        if (snapshot.empty && Object.keys(assignmentsByCourse).length === 0) {
-          courseContainer.innerHTML = "<p>No assignments or courses found.</p>";
+        if (coursesSnap.empty && Object.keys(assignmentsByCourse).length === 0) {
+          courseContainer.innerHTML = "<p class='text-muted'>No assignments or courses found.</p>";
           return;
         }
 
-        snapshot.forEach(doc => {
+        coursesSnap.forEach(doc => {
           const courseId = doc.id;
           const data = doc.data();
 
@@ -212,12 +138,12 @@
           };
 
           const courseCard = document.createElement("div");
-          courseCard.className = "card p-3";
+          courseCard.className = "card p-3 mb-3";
           courseCard.innerHTML = `
             <h5>${course.courseName}</h5>
             <p><strong>Start:</strong> ${course.startDate} | <strong>End:</strong> ${course.endDate}</p>
             <button class="btn btn-primary btn-sm">Enter</button>
-            <div class="nested-section" style="display: none;"></div>
+            <div class="nested-section mt-2" style="display: none;"></div>
           `;
 
           const toggleBtn = courseCard.querySelector("button");
@@ -226,20 +152,20 @@
           toggleBtn.addEventListener("click", () => {
             nestedSection.style.display = nestedSection.style.display === "none" ? "block" : "none";
 
-            if (nestedSection.innerHTML === "") {
+            if (nestedSection.innerHTML === "" && Object.keys(course.weeks).length) {
               const sortedWeeks = Object.keys(course.weeks).sort((a, b) => {
-                const weekNumA = parseInt(a.replace('Week ', ''), 10);
-                const weekNumB = parseInt(b.replace('Week ', ''), 10);
+                const weekNumA = parseInt(a.replace(/\D/g, ''), 10) || 0;
+                const weekNumB = parseInt(b.replace(/\D/g, ''), 10) || 0;
                 return weekNumA - weekNumB;
               });
 
               sortedWeeks.forEach(week => {
                 const weekCard = document.createElement("div");
-                weekCard.className = "card p-2";
+                weekCard.className = "card p-2 mb-2";
                 weekCard.innerHTML = `
                   <h6>${week}</h6>
                   <button class="btn btn-secondary btn-sm">Enter</button>
-                  <div class="nested-section" style="display: none;"></div>
+                  <div class="nested-section mt-2" style="display: none;"></div>
                 `;
 
                 const weekToggle = weekCard.querySelector("button");
@@ -257,7 +183,7 @@
                       if (data.codeQuestions?.length) types.push("Code");
 
                       const subjectCard = document.createElement("div");
-                      subjectCard.className = "card p-2";
+                      subjectCard.className = "card p-2 mb-2";
                       subjectCard.innerHTML = `
                         <h6>${subjectName}</h6>
                         <p><strong>Types:</strong> ${types.join(", ") || "None"}</p>
@@ -281,16 +207,15 @@
       }
     }
 
-    // Global function so "onclick" works
-    window.editAssignment = function (docId) {
+    // Global edit function
+    window.editAssignment = docId => {
       window.location.href = `create_assignment.html?editId=${docId}`;
     };
 
-    // Sidebar toggle function for mobile
-    window.toggleSidebar = function () {
-      const sidebar = document.getElementById('sidebar');
-      sidebar.classList.toggle('show');
-    }
+    // Sidebar toggle
+    window.toggleSidebar = () => {
+      document.getElementById('sidebar').classList.toggle('show');
+    };
 
     loadAssignments();
   </script>
