--- a/Admin/upload_material.html
+++ b/Admin/upload_material.html
@@ -7,93 +7,80 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      font-family: 'Inter', sans-serif; /* Using Inter font */
-    }
-
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 1050;
-      background-color: #2A5C88; /* Changed to match other sidebars */
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 4px;
-      cursor: pointer;
-      display: none; /* show only on small screens */
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 220px;
-      background-color: #2a5c88;
-      padding: 1.5rem 1rem;
+      min-height: 100vh;
+      background-color: #2A5C88;
       color: white;
-      overflow-y: auto;
-      transition: transform 0.3s ease;
+      padding: 20px 10px;
+    }
+
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
     }
 
     .sidebar a {
-      display: block;
       color: white;
       text-decoration: none;
-      margin-bottom: 12px;
-      padding: 8px 10px;
-      border-radius: 5px;
+      display: block;
+      padding: 10px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
     }
 
-    .sidebar a.active,
-    .sidebar a:hover {
-      background-color: #1f4568;
-      color: #fff;
+    .sidebar a:hover,
+    .sidebar a.active {
+      background-color: #2A5C88;
     }
 
-    /* Hide sidebar on small screens by default */
-    @media (max-width: 991.98px) {
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
+    }
+
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
+    }
+
+    .btn-purple {
+      background: #2A5C88;
+      color: white;
+    }
+
+    .btn-purple:hover {
+      background: #2A5C88;
+    }
+
+    .toggle-btn {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
       .sidebar {
-        transform: translateX(-250px);
-        z-index: 1040;
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
       }
+
       .sidebar.show {
         transform: translateX(0);
       }
+
       .toggle-btn {
         display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
       }
-      .main-content { /* Renamed from .container for consistency */
-        margin-left: 0 !important;
-        padding: 1rem;
-      }
-      .sidebar.show + .main-content {
-        /* Adjust main content when sidebar is shown on small screens */
-        transform: translateX(250px);
-        transition: transform 0.3s ease-in-out;
-      }
-    }
-
-    /* On larger screens, keep sidebar visible and push container */
-    @media (min-width: 992px) {
-      .main-content { /* Renamed from .container for consistency */
-        margin-left: 240px;
-        padding: 2rem; /* Added padding for larger screens */
-      }
-    }
-
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
     }
   </style>
 </head>
@@ -108,7 +95,7 @@
     <a href="admin_courses.html">Courses</a>
     <a href="create_assignment.html">Assignment</a>
     <a href="upload_material.html" class="active">Upload Material</a>
-    <a href="assignments.html">Students</a>
+    <a href="student.html">Students</a>
     <a href="../index.html" onclick="logout()">Logout</a>
   </div>
   <div class="main-content"> <!-- Renamed from .container for consistency -->
