--- a/Student/week_detail.html
+++ b/Student/week_detail.html
@@ -7,126 +7,97 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #f4f6f9;
-      font-family: 'Segoe UI', sans-serif; /* Preserving your font choice */
-      margin: 0; /* Ensure no default body margin */
+      background: #f5f9f8;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
     }
 
-    /* Hide toggle button by default (for larger screens) */
+    .sidebar {
+      min-height: 100vh;
+      background-color: #2A5C88;
+      color: white;
+      padding: 20px 10px;
+    }
+
+    .sidebar h4 {
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+
+    .sidebar a:hover {
+      background-color: #1d4568;
+    }
+
+    .sidebar a.active {
+      background-color: #17405f;
+    }
+
+    .sidebar a.logout-link {
+      color: #ffcccc !important;
+    }
+
+    .sidebar a.logout-link:hover {
+      background-color: #c0392b;
+      color: white !important;
+    }
+
+    .btn-purple {
+      background: #2A5C88;
+      color: white;
+    }
+
+    .btn-purple:hover {
+      background: #1d4568;
+    }
+
     .toggle-btn {
       display: none;
     }
 
-    /* Sidebar styles for large screens (md and up) */
-    @media (min-width: 768px) {
-      .sidebar {
-        min-height: 100vh;
-        background-color: #2A5C88; /* Your specified color */
-        color: white;
-        padding: 20px; /* Original padding for sidebar */
-        border-radius: 8px; /* Original border-radius for sidebar */
-        position: fixed; /* Fixed sidebar on desktop */
-        top: 0;
-        left: 0;
-        width: 250px; /* Define a fixed width for desktop sidebar */
-        overflow-y: auto;
-      }
-      /* Adjust main content to make space for the fixed sidebar */
-      .main-content-wrapper {
-        margin-left: 250px; /* Offset for the fixed sidebar */
-        padding: 2rem; /* Add padding for content */
-      }
+    .main-content {
+      padding: 20px;
     }
 
-    /* Sidebar styles for small screens (below md) */
-    @media (max-width: 767.98px) {
+    .card {
+      border: none;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    @media (max-width: 768px) {
       .sidebar {
         position: fixed;
-        width: 250px; /* Define width for mobile sidebar */
+        width: 200px;
         z-index: 1000;
-        transform: translateX(-100%); /* Hidden by default */
+        transform: translateX(-100%);
         transition: transform 0.3s ease-in-out;
-        height: 100vh; /* Full height on mobile */
-        background-color: #2A5C88; /* Your specified color */
-        color: white;
-        padding: 1rem; /* Adjusted padding for mobile sidebar */
-        border-radius: 0; /* No border-radius for full-height fixed sidebar */
       }
 
       .sidebar.show {
-        transform: translateX(0); /* Show when 'show' class is added */
+        transform: translateX(0);
       }
 
-      /* Toggle button visibility and styling for mobile */
       .toggle-btn {
-        display: block !important; /* Ensure it's visible on mobile */
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        z-index: 1001; /* Above sidebar */
-        background-color: #2A5C88; /* Your specified color */
+        display: block;
+        background-color: #2A5C88;
         color: white;
         border: none;
-        padding: 0.5rem 1rem;
-        font-size: 1.2rem;
-        border-radius: 5px;
-        cursor: pointer;
+        padding: 10px 15px;
+        margin: 10px;
       }
 
-      /* Adjust main content when sidebar is shown on small screens */
-      .main-content-wrapper {
-        padding: 2rem 1rem; /* Default padding for mobile, adjusted for small screens */
-        transition: transform 0.3s ease-in-out;
+      .main-content {
+        margin-left: 0;
       }
-      .main-content-wrapper.shifted {
-        transform: translateX(250px); /* Shift content when sidebar is open */
-      }
-    }
-
-    /* Common sidebar elements */
-    .sidebar h5 {
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-    .sidebar a {
-      display: block;
-      color: white;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .sidebar a:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-    
-    /* Main content styling */
-    .content {
-      background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      min-height: 100vh; /* Original min-height for content */
-    }
-    /* Adjust main content padding on smaller screens */
-    @media (max-width: 767.98px) {
-      .content {
-        min-height: auto;
-        padding-top: 1rem;
-      }
-    }
-
-    /* Custom status message styling */
-    #statusMessage {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1200;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      display: none; /* hidden by default */
     }
   </style>
 </head>
