add c , c++ , ML subject in List

--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -119,6 +119,9 @@
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="CSS"><label class="form-check-label">CSS</label></div>
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="JavaScript"><label class="form-check-label">JavaScript</label></div>
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">SQL</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">C++</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">ML</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">C</label></div>
           </div>
           <button type="submit" class="btn btn-primary">Create Course</button>
         </form>
