--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -7,72 +7,96 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
-    body {
-      background: #f5f9f8;
-      font-family: 'Segoe UI', sans-serif;
-    }
+  body {
+    background: #f5f9f8;
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0; /* Remove browser default margin */
+  }
 
+  .sidebar {
+    min-height: 100vh;
+    background-color: #2A5C88;
+    color: white;
+    padding: 20px 10px;
+  }
+
+  .sidebar h4 {
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+
+  .sidebar a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .sidebar a:hover,
+  .sidebar a.active {
+    background-color: #204664; /* Darker hover for clarity */
+  }
+
+  .sidebar a.logout-link {
+    color: #ffcccc !important;
+  }
+
+  .sidebar a.logout-link:hover {
+    background-color: #c0392b;
+    color: white !important;
+  }
+
+  .toggle-btn {
+    display: none;
+  }
+
+  /* Mobile */
+  @media (max-width: 768px) {
     .sidebar {
-      min-height: 100vh;
+      position: fixed;
+      width: 200px;
+      z-index: 1000;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.show {
+      transform: translateX(0);
+    }
+    .toggle-btn {
+      display: block;
       background-color: #2A5C88;
       color: white;
-      padding: 20px 10px;
+      border: none;
+      padding: 10px 15px;
+      margin: 10px;
     }
-
-    .sidebar h4 {
-      font-weight: bold;
-      margin-bottom: 30px;
+    .main-content {
+      margin-left: 0; /* No sidebar space on mobile */
     }
+  }
 
-    .sidebar a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      padding: 10px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
-      cursor: pointer;
+  /* Desktop */
+  @media (min-width: 769px) {
+    .sidebar {
+      position: fixed;
+      width: 220px;
+      top: 0;
+      left: 0;
+      transform: none; /* Always visible */
     }
-
-    .sidebar a:hover,
-    .sidebar a.active {
-      background-color: #204664; /* Darker hover for clarity */
+    .main-content {
+      margin-left: 220px; /* Push content beside sidebar */
+      padding: 20px;
     }
-
-    .sidebar a.logout-link {
-      color: #ffcccc !important;
-    }
-
-    .sidebar a.logout-link:hover {
-      background-color: #c0392b;
-      color: white !important;
-    }
-
     .toggle-btn {
-      display: none;
+      display: none; /* Hide toggle on desktop */
     }
+  }
+</style>
 
-    @media (max-width: 768px) {
-      .sidebar {
-        position: fixed;
-        width: 200px;
-        z-index: 1000;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-      }
-      .sidebar.show {
-        transform: translateX(0);
-      }
-      .toggle-btn {
-        display: block;
-        background-color: #2A5C88;
-        color: white;
-        border: none;
-        padding: 10px 15px;
-        margin: 10px;
-      }
-    }
-  </style>
 </head>
 <body>
 
