--- a/Admin/courseHistory.html
+++ b/Admin/courseHistory.html
@@ -7,83 +7,110 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
-    body {
-      background: #f5f9f8;
-      font-family: 'Segoe UI', sans-serif;
-    }
+  body {
+    background: #f5f9f8;
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+  }
 
+  .sidebar {
+    min-height: 100vh;
+    background-color: #2A5C88;
+    color: white;
+    padding: 20px 10px;
+  }
+
+  .sidebar h4 {
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+
+  .sidebar a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .sidebar a:hover,
+  .sidebar a.active {
+    background-color: #204664;
+  }
+
+  .sidebar a.logout-link {
+    color: #ffcccc !important;
+  }
+
+  .sidebar a.logout-link:hover {
+    background-color: #c0392b;
+    color: white !important;
+  }
+
+  .btn-purple {
+    background: #2A5C88;
+    color: white;
+  }
+
+  .btn-purple:hover {
+    background: #204664;
+  }
+
+  .toggle-btn {
+    display: none;
+  }
+
+  /* Mobile layout */
+  @media (max-width: 768px) {
     .sidebar {
-      min-height: 100vh;
-      background-color: #2A5C88;
-      color: white;
-      padding: 20px 10px;
+      position: fixed;
+      width: 200px;
+      z-index: 1000;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
     }
 
-    .sidebar h4 {
-      font-weight: bold;
-      margin-bottom: 30px;
-    }
-
-    .sidebar a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      padding: 10px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
-      cursor: pointer;
-    }
-
-    .sidebar a:hover,
-    .sidebar a.active {
-      background-color: #204664;
-    }
-
-    .sidebar a.logout-link {
-      color: #ffcccc !important;
-    }
-
-    .sidebar a.logout-link:hover {
-      background-color: #c0392b;
-      color: white !important;
-    }
-
-    .btn-purple {
-      background: #2A5C88;
-      color: white;
-    }
-
-    .btn-purple:hover {
-      background: #204664;
+    .sidebar.show {
+      transform: translateX(0);
     }
 
     .toggle-btn {
-      display: none;
+      display: block;
+      background-color: #2A5C88;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      margin: 10px;
     }
 
-    @media (max-width: 768px) {
-      .sidebar {
-        position: fixed;
-        width: 200px;
-        z-index: 1000;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-      }
-
-      .sidebar.show {
-        transform: translateX(0);
-      }
-
-      .toggle-btn {
-        display: block;
-        background-color: #2A5C88;
-        color: white;
-        border: none;
-        padding: 10px 15px;
-        margin: 10px;
-      }
+    .main-content {
+      margin-left: 0; /* Full width on mobile */
     }
-  </style>
+  }
+
+  /* Desktop layout */
+  @media (min-width: 769px) {
+    .sidebar {
+      position: fixed;
+      width: 220px;
+      top: 0;
+      left: 0;
+      transform: none; /* Always visible */
+    }
+
+    .main-content {
+      margin-left: 220px; /* Push content beside sidebar */
+      padding: 20px;
+    }
+
+    .toggle-btn {
+      display: none; /* Hide toggle button on desktop */
+    }
+  }
+</style>
+
 </head>
 <body>
 
