--- a/Admin/create_assignment_History.html
+++ b/Admin/create_assignment_History.html
@@ -6,52 +6,110 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
-      background: #f5f9f8;
-      font-family: 'Segoe UI', sans-serif;
-    }
+  body {
+    background: #f5f9f8;
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+  }
+
+  .sidebar {
+    min-height: 100vh;
+    background-color: #2A5C88;
+    color: white;
+    padding: 20px 10px;
+  }
+
+  .sidebar h4 {
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+
+  .sidebar a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .sidebar a.active,
+  .sidebar a:hover {
+    background-color: #1f4565;
+  }
+
+  .sidebar a.logout-link {
+    color: #ffcccc !important;
+  }
+
+  .sidebar a.logout-link:hover {
+    background-color: #c0392b;
+    color: white !important;
+  }
+
+  .btn-purple {
+    background: #2A5C88;
+    color: white;
+  }
+
+  .btn-purple:hover {
+    background: #1f4565;
+  }
+
+  .toggle-btn {
+    display: none;
+  }
+
+  /* Mobile layout */
+  @media (max-width: 768px) {
     .sidebar {
-      min-height: 100vh;
+      position: fixed;
+      width: 200px;
+      z-index: 1000;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .sidebar.show {
+      transform: translateX(0);
+    }
+
+    .toggle-btn {
+      display: block;
       background-color: #2A5C88;
       color: white;
-      padding: 20px 10px;
+      border: none;
+      padding: 10px 15px;
+      margin: 10px;
     }
-    .sidebar h4 { font-weight: bold; margin-bottom: 30px; }
-    .sidebar a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      padding: 10px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
-      cursor: pointer;
+
+    .main-content {
+      margin-left: 0; /* Full width on mobile */
     }
-    .sidebar a.active,
-    .sidebar a:hover { background-color: #1f4565; }
-    .sidebar a.logout-link { color: #ffcccc !important; }
-    .sidebar a.logout-link:hover { background-color: #c0392b; color: white !important; }
-    .btn-purple { background: #2A5C88; color: white; }
-    .btn-purple:hover { background: #1f4565; }
-    .toggle-btn { display: none; }
-    @media (max-width: 768px) {
-      .sidebar {
-        position: fixed;
-        width: 200px;
-        z-index: 1000;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-      }
-      .sidebar.show { transform: translateX(0); }
-      .toggle-btn {
-        display: block;
-        background-color: #2A5C88;
-        color: white;
-        border: none;
-        padding: 10px 15px;
-        margin: 10px;
-      }
+  }
+
+  /* Desktop layout */
+  @media (min-width: 769px) {
+    .sidebar {
+      position: fixed;
+      width: 220px;
+      top: 0;
+      left: 0;
+      transform: none; /* Always visible */
     }
-  </style>
+
+    .main-content {
+      margin-left: 220px; /* Push content beside sidebar */
+      padding: 20px;
+    }
+
+    .toggle-btn {
+      display: none; /* Hide toggle button on desktop */
+    }
+  }
+</style>
+
 </head>
 <body>
   <!-- Toggle button -->
