add Quantitative Aptitude & Reasoning subject

--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -146,6 +146,8 @@
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">C++</label></div>
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">ML</label></div>
             <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">C</label></div>
+            <div class="form-check form-check-inline"><input class="form-check-input subject-checkbox" type="checkbox" value="SQL"><label class="form-check-label">Quantitative Aptitude & Reasoning</label></div>
+
           </div>
           <button type="submit" class="btn btn-primary">Create Course</button>
         </form>
